# ingestion_contract_mcp

./: .envrc  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.cursor/rules/: git.mdc  project.mdc  python.mdc
.cursor/workflows/: task_lifecycle.mdc
cli/: __init__.py  main.py  output.py
cli/commands/: __init__.py  destination.py  source.py  validate.py
core/: README.md  __init__.py  config.py  contract_generator.py  database_analyzer.py  models.py
core/sources/: __init__.py  csv.py  json.py  utils.py
core/sources/api/: introspection.py
core/sources/database/: __init__.py  contracts.py  engine.py  introspection.py  relationships.py  type_mapping.py
mcp_server/: README.md  __init__.py  contract_generator.py  contract_handler.py  database_analyzer.py  handlers.py  models.py  server.py
tests/: __init__.py  conftest.py  test_cli.py  test_contract_generator.py  test_contract_generator_data_quality.py  test_contract_handler.py  test_database_analyzer.py  test_destination_database.py  test_json_source.py  test_server.py
tests/cli/: test_cli.py  test_config.py  test_destination_api.py  test_source_api.py
tests/core/: test_contract_generator.py  test_contract_generator_data_quality.py
tests/core/sources/api/: test_introspection.py
tests/core/sources/database/: test_introspection_list.py
tests/fixtures/: sample_transactions.csv
