[project]
name = "ingestion-contract-mcp"
version = "0.1.0"
description = "MCP server for generating data ingestion contracts"
readme = "mcp_server/README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
pandas = [
    "pandas>=2.0.0",
]
dev = [
    "ruff>=0.14.0",
    "mypy>=1.18.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pandas-stubs>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["mcp_server"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp_server.server"
# MCP decorators don't have complete type stubs
disallow_untyped_decorators = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "mcp_server.models"
# Pydantic models with aliases have dynamic __init__ signatures
warn_return_any = false

[[tool.mypy.overrides]]
module = "tests.*"
# Pydantic models with aliases in tests
disable_error_code = ["call-arg"]

[[tool.mypy.overrides]]
module = "mcp_server.contract_generator"
# Pydantic models with aliases
disable_error_code = ["call-arg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
